<resources>

    <string name="app_name">uy-app</string>
    <string name="jonuy_com">jonuy.github.io</string>

    <string name="about_body_text">I like that programming offers the power to create.\n\nSince graduating from Columbia University in 2006, I\'ve been blessed with opportunities to create. Through code and coffee, I\'ve helped craft experiences for people to enjoy and built systems around which communities could connect. Whether it\'s matching gamers on their Xbox 360s, facilitating social good for young people on their smartphones, or delivering text-based experiences through SMS, I enjoy exploring how technology can enhance the relationships around us.\n\nDC sports teams are the ire of my wife when games are on TV. The joys of biking around NYC are now apparent to me. I pretend to know how to play the guitar and cook. And I\'d like to think that I can dance.\n\nAlso, back there is Aiko. She\'s a donut stealer.</string>
    <string name="about_last_updated">Last updated: September 1, 2013</string>
    <string name="about_title">About Me</string>
    <string name="contact_donut_input">What\'s your favorite kind of donut?</string>
    <string name="contact_email_input">Your Email:</string>
    <string name="contact_message_input">Your Message:</string>
    <string name="contact_submit">Submit</string>
    <string name="cupcake_ipsum">Wafer chupa chups brownie cheesecake bonbon carrot cake chupa chups caramels toffee. Danish chocolate cake muffin tootsie roll lollipop wafer bonbon. Chocolate donut gingerbread halvah jelly-o.\n\nToffee wafer cookie toffee chocolate bar soufflé. Cookie toffee biscuit tootsie roll ice cream. Oat cake ice cream fruitcake sesame snaps. Donut jelly lollipop donut macaroon gummies.\n\nMarzipan jelly-o macaroon oat cake. Cookie sesame snaps chocolate cake liquorice unerdwear.com. Unerdwear.com cupcake sweet brownie chocolate.</string>
    <string name="cupcake_ipsum2">Cupcake ipsum dolor sit amet. Cotton candy bear claw caramels. Halvah lollipop jelly-o danish biscuit icing marzipan bonbon. Halvah sesame snaps applicake marzipan.\n\nDanish marzipan applicake danish pie lemon drops. Jujubes jelly halvah. Cheesecake pastry dragée.\n\nBonbon bonbon sweet candy canes chocolate cake lollipop apple pie chocolate bar croissant. Tiramisu chocolate bar candy. Gummi bears pie gingerbread chocolate chupa chups toffee bear claw gummi bears. Cookie cheesecake liquorice unerdwear.com applicake.\n\nGummi bears cookie muffin caramels. Caramels brownie chocolate cake jelly beans topping chocolate cake dragée. Jelly-o sweet macaroon muffin caramels croissant soufflé. Chupa chups jelly-o soufflé.</string>
    <string name="cupcake_ipsum3">Cupcake ipsum dolor. Sit amet topping chocolate cake liquorice halvah pie. Toffee tiramisu chupa chups marzipan gingerbread dragée wafer cupcake cotton candy.\n\nBrownie macaroon marzipan dragée. Macaroon liquorice jelly-o tart cupcake chupa chups caramels gummies marshmallow. Sesame snaps soufflé cake tootsie roll chocolate applicake pudding icing. Pudding sesame snaps marshmallow unerdwear.com chocolate brownie dessert fruitcake.\n\nMarzipan cake sweet roll. Muffin gummi bears gummi bears liquorice bonbon bear claw biscuit marzipan. Muffin oat cake marzipan dragée. Cupcake topping cookie.\n\nJelly soufflé oat cake sugar plum chocolate cookie bonbon. Topping gummies pastry donut gummi bears pie. Tootsie roll bear claw jelly toffee donut.\n\nSesame snaps jelly topping unerdwear.com caramels muffin pastry. Tiramisu brownie unerdwear.com carrot cake danish dragée. Cake tart pie powder cookie sesame snaps gummies sweet. Tootsie roll sweet soufflé.</string>
    <string name="mail_composed">From: %1$s\n\nFavorite donut: %2$s\n\nMessage: %3$s</string>
    <string name="mail_progress_dialog_title">Sending email...</string>
    <string name="mail_progress_dialog_body">boop beep boop boop</string>
    <string name="mail_send_success">Thanks for the email!</string>
    <string name="mail_send_failure">Error sending the message. Email me at jonathanjuy@gmail.com and let me know I messed up somewhere.</string>
    <string name="mail_send_no_internet">No internet connection found. Email could not be sent.</string>
    <string name="menu_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_contact">Contact Me</string>
    <string name="nav_home">Home</string>
    <string name="nav_projects">Projects</string>

</resources>