<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg4" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/button_back"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp" />
	        <ImageView
	            android:layout_width="128dp"
	            android:layout_height="128dp"
	            android:layout_gravity="center_horizontal"
	            android:src="@drawable/face_circle" />
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_marginTop="16dp"
	            android:layout_marginBottom="16dp"
	            android:textColor="@android:color/white"
	            android:textSize="32sp"
	            android:textStyle="bold"
	            android:text="@string/about_title" />
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_margin="10dp"
	            android:background="@drawable/text_background"
	            android:textColor="@android:color/black"
	            android:textSize="16sp"
	            android:text="@string/about_body_text" />
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:layout_marginBottom="10dp"
	            android:textColor="@android:color/white"
	            android:textSize="16sp"
	            android:textStyle="italic"
	            android:text="@string/about_last_updated" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
